src/objects/CC_Integration_Service__mdt.object
<CustomObject>
    <fields>
        <fullName>CC_Endpoint__c</fullName>
        <label>Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Method__c</fullName>
        <label>Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Mock__c</fullName>
        <label>Mock</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CC_Retrieve_Mock__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Retrieve Mock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CC_Timeout__c</fullName>
        <label>Timeout</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Integration Service</label>
    <pluralLabel>Integrations Services</pluralLabel>
</CustomObject>